GNOME Bugzilla – Bug 643226
critical warnings on soup_cookie_domain_matches
Last modified: 2011-03-11 01:02:42 UTC
Running liferea, I sometimes get critical warnings from libsoup. We're not doing anything special with hosts in Liferea, so I suspect this is a libsoup bug. This with libsoup 2.33.90. libsoup-CRITICAL **: soup_cookie_domain_matches: assertion `host != NULL' failed aborting... Program received signal SIGABRT, Aborted. 0x00007ffff1aba165 in raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64 64 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory. in ../nptl/sysdeps/unix/sysv/linux/raise.c (gdb) bt
+ Trace 226098
hm... i guess you're calling soup_message_set_first_party() with a non-http URI?
We don't. Our code is at http://liferea.git.sourceforge.net/git/gitweb.cgi?p=liferea/liferea;a=blob;f=src/net.c;h=9177a0246467272faa58d5624076d838dc5f7b44;hb=HEAD Plus a few soup_uri_set_* calls to set the proxy for webkit, at http://liferea.git.sourceforge.net/git/gitweb.cgi?p=liferea/liferea;a=blob;f=src/webkit/webkit.c;h=5be250dae7851fd455fc4fa17dec642c5a4c698c;hb=HEAD Let me know if you think this is actually a bug in our code and not in libsoup.
173 webkit_web_view_load_string (WEBKIT_WEB_VIEW (htmlwidget), string, 174 content_type, "UTF-8", "file://"); "file://" is invalid. It should be "file:///". I suspect that may fix the bug. (The error is definitely happening within WebKit's use of libsoup, not your own direct use of it.) But it is possible that you could have, eg, a data: URI, which would legitimately have no host component, so libsoup ought to be catching that before the return-if-fail. Fixed in git. Thanks for the bug report.