soup-cookie-jar: avoid a g_return_if_fail when using non-http URIs

When using SOUP_COOKIE_JAR_ACCEPT_NO_THIRD_PARTY, don't try to
domain-match the cookie if the first_party URI has no domain.

https://bugzilla.gnome.org/show_bug.cgi?id=643226